.k8s/base/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: github-image-container
          image: ghcr.io/qxecutioner/webapplication1:latest
          
          ports:
            - containerPort: 80
