.k8s/base/app4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4-deployment
  labels:
    app: app4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
        - name: github-image-container
          image: ghcr.io/qxecutioner/webapplication4:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: 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
