.k8s/base/app4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-service
spec:
  selector:
    app: app4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
