.k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi1
  namespace: dev
spec:
  selector:
    app: webapi1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
